# CoFlame

./: CMakeLists.txt  README.md
examples/5atm/: chem.inp  run.sh
src/: CMakeLists.txt  CoFlame.f90  ckinterp.f  cklib.f  derf.f  math.f  mechanisms.inc  polfit.f  secondt.f  speciessootcoef.inc  tranfit.f  tranlib.f  xerror.f
utils/: tec2vtk
